--- a/Transportaion/Transportaion.csproj
+++ b/Transportaion/Transportaion.csproj
@@ -67,7 +67,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Database1.mdf" />
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
+    <Content Include="HOME.html" />
     <Content Include="IMAGES\SKY.jpg" />
     <Content Include="Regstation.aspx" />
     <Content Include="SIGNUP.aspx" />
