--- a/Transportaion/Transportaion.csproj
+++ b/Transportaion/Transportaion.csproj
@@ -71,14 +71,42 @@
     <Content Include="App_Data\Database1_log.ldf">
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
-    <Content Include="HOME.html" />
+    <Content Include="BOOKING.aspx" />
+    <Content Include="DESTINATION.aspx" />
+    <Content Include="HOME.aspx" />
+    <Content Include="IMAGES\alexandria.jpg" />
     <Content Include="IMAGES\cloud.png" />
+    <Content Include="IMAGES\Dahab.jpg" />
+    <Content Include="IMAGES\Hurghada.jpg" />
+    <Content Include="IMAGES\Port-Said.jpg" />
     <Content Include="IMAGES\SKY.jpg" />
     <Content Include="Regstation.aspx" />
-    <Content Include="SIGNUP.aspx" />
+    <Content Include="SIGNIN.aspx" />
     <Content Include="Web.config" />
+    <Content Include="STATIONS.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BOOKING.aspx.cs">
+      <DependentUpon>BOOKING.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BOOKING.aspx.designer.cs">
+      <DependentUpon>BOOKING.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DESTINATION.aspx.cs">
+      <DependentUpon>DESTINATION.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DESTINATION.aspx.designer.cs">
+      <DependentUpon>DESTINATION.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HOME.aspx.cs">
+      <DependentUpon>HOME.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HOME.aspx.designer.cs">
+      <DependentUpon>HOME.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regstation.aspx.cs">
       <DependentUpon>Regstation.aspx</DependentUpon>
@@ -87,12 +115,19 @@
     <Compile Include="Regstation.aspx.designer.cs">
       <DependentUpon>Regstation.aspx</DependentUpon>
     </Compile>
-    <Compile Include="SIGNUP.aspx.cs">
-      <DependentUpon>SIGNUP.aspx</DependentUpon>
+    <Compile Include="SIGNIN.aspx.cs">
+      <DependentUpon>SIGNIN.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="SIGNUP.aspx.designer.cs">
-      <DependentUpon>SIGNUP.aspx</DependentUpon>
+    <Compile Include="SIGNIN.aspx.designer.cs">
+      <DependentUpon>SIGNIN.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="STATIONS.aspx.cs">
+      <DependentUpon>STATIONS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="STATIONS.aspx.designer.cs">
+      <DependentUpon>STATIONS.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
